--- a/projects/triqui/index.html
+++ b/projects/triqui/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100..900&display=swap" rel="stylesheet">
     <title>Vite + React</title>
   </head>
-  <body class="bg-gray-800 text-white m-0 flex justify-center min-w-[320px] min-h-screen font-sans text-base leading-6 font-normal antialiased">
+  <body class="flex justify-center items-center bg-[#0C134F] text-white encode-sans font-bold ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
